--- a/src/app/list-restro/list-restro.component.html
+++ b/src/app/list-restro/list-restro.component.html
@@ -1,24 +1,33 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">id</th>
-      <th scope="col">name</th>
-      <th scope="col">address</th>
-      <th scope="col">email</th>
-      <th scope="col">Remove & Edit</th>
+<div class="container">
+  <div class="row">
+    <div class="col-10">
+      <h1>List Of Restauratnts</h1>
+      <table class="table">
+        <thead>
+          <tr class="table-row">
+            <th scope="col">id</th>
+            <th scope="col">name</th>
+            <th scope="col">address</th>
+            <th scope="col">email</th>
+            <th scope="col">Remove & Edit</th>
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let answer of collection">
-      <th scope="row">{{answer.id}}</th>
-      <td>{{answer.name}}</td>
-      <td>{{answer.address}}</td>
-      <td>{{answer.email}}</td>
-      <td><i (click)="removefrestro(answer.id)" class="fa fa-trash" style="font-size:17px;color:red;"></i>
-      <a href="/update/{{answer.id}}"><i  class="fa fa-edit" style="font-size:17px;color:rgb(5, 7, 131);"></i></a>></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let answer of collection">
+            <th scope="row">{{answer.id}}</th>
+            <td>{{answer.name}}</td>
+            <td>{{answer.address}}</td>
+            <td>{{answer.email}}</td>
+            <td><i (click)="removefrestro(answer.id)" class="fa fa-trash" style="font-size:17px;color:red;"></i>
+              <a href="/update/{{answer.id}}"><i class="fa fa-edit"
+                  style="font-size:17px;color:rgb(5, 7, 131);"></i></a>>
+            </td>
 
-    </tr>
+          </tr>
 
-  </tbody>
-</table>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
