--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="row">
+    <div class="col-6">
 <h1>Register new user!</h1>
  <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
   <strong>congratulations!</strong> User has been Registerd successfully.
@@ -21,3 +24,6 @@
    <br> 
    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+</div>
+</div>
+</div>
