--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,66 @@
+ *{
+     margin: 0;
+     padding: 0;
+ }
+ .bg-light {
+    background-color: #1f6bb8 !important;
+}
+ nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 6%;
+
+}
+
+
+.nav-item{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-item a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.nav-item:after{
+    content: "";
+    width: 0;
+    height: 2px;
+    display: block;
+    background-color: #640f96;
+    margin: auto;
+    transition: 1s;
+ }
+ .nav-item:hover:after{
+    width: 100%;
+   }
+
+
 footer{
     padding: 10px;
-    background-color: lightskyblue;
+    background-color: rgb(107, 117, 122);
     position: absolute;
     left: 0;
     right: 0;
     width: 100%;
 }
 
-.bg-light {
-    background-color: #1f6bb8 !important;
+footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 15px;
+    
+}
+
+.icon .fa{
+    color: #3e046d;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
 }
