--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  
   <div class="container-fluid">
+    
     <a class="navbar-brand" routerLink="">RESTRAUTANT</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="add">ADD RESTRAUTANT</a>
+          <a class="nav-link " aria-current="page" routerLink="add">ADD RESTRAUTANT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="">LIST RESTRAUTANT</a>
@@ -26,12 +28,21 @@
       </ul>
     </div>
   </div>
+  
+  
 
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
 <footer>
   <p>Copyright@xyzdevloper 2021</p>
+  <div class="icon">
+    <i class="fa fa-facebook"></i>
+    <i class="fa fa-twitter"></i>
+    <i class="fa fa-instagram"></i>
+    <i class="fa fa-linkedin"></i>
+    
+</div>
 </footer>
 </div>
 
