--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
-
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+  <h1>Login here!</h1>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control"  name="email" [(ngModel)]="email" >
@@ -10,4 +13,9 @@
     </div>
   <br>
     <button type="submit" (click)="login()">Login</button>
+
+  </div>
+</div>
+</div>
+
   
