--- a/src/app/update-restro/update-restro.component.html
+++ b/src/app/update-restro/update-restro.component.html
@@ -1,4 +1,7 @@
-<h1>Edit Restaurant!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+<h1>UPDATE HERE!</h1>
 <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
   <strong>congratulations!</strong> Your data has been Updated successfully.
   <button (click)=closeAlert() type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -21,3 +24,6 @@
   <br>
   <button type="submit" class="btn btn-primary">Update</button>
 </form>
+</div>
+</div>
+</div>
